--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Mimonatega</title>
   </head>
-  <body style="background-color:#f5f5f5;   overflow: hidden; /* Hide scrollbars */">
+  <body style="overflow: hidden; /* Hide scrollbars */">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
